--- a/component.html
+++ b/component.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,28 @@
     <title>Tailwind</title>
     <link rel="stylesheet" href="./Assets/css/tailwind.min.css">
 </head>
+
 <body class="bg-gray-300">
     <div class="container">
-        <div class="title text-center text-3xl text-blue-700 ">
+        <!-- <div class="title text-center text-3xl text-blue-700 ">
             Services I Afford
-        </div>
-        <div class="md:flex flex-row">
-            <div class="bg-white max-w-md mt-6 rounded-xl mx-auto shadow-lg hover:shadow-2xl overflow-hidden transition">
-                <img src="./Assets/images/img_4.jpg" alt="">
-        
+        </div> -->
+        <div class="bg-white max-w-md md:max-w-3xl mt-6 rounded-xl mx-auto shadow-lg hover:shadow-2xl overflow-hidden transition">
+            <div class="md:flex">
+                <div class="w-full">
+                    <img src="./Assets/images/img_4.jpg" alt="" class="md:h-full w-42">
+                </div>
                 <div class="p-8">
                     <h1 class="text-md font-semibold text-blue-700 uppercase">Things In Tailwind</h1>
                     <a href="#" class="mt-1 text-2xl block text-black capitalize hover:underline">Some Thing</a>
                     <p class="mt-2 text-gray-600">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam soluta illum quos, distinctio?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam soluta illum quos,
+                        distinctio?
                     </p>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
